--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
+  "name": "chrome-extension-web-to-obsidian",
   "version": "0.0.1",
-  "description": "chrome extension boilerplate",
+  "description": "Chrome extension to copy content from web pages to Obsidian vault",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/ru13r/web-to-obsidian.git"
   },
   "scripts": {
     "build": "tsc --noEmit && vite build",
